--- a/bootstrap.html
+++ b/bootstrap.html
@@ -1,2 +1,8 @@
 <!-- Evita que el modal se cierre al hacer click fuera del elemento -->
 <div class="modal fade" id="cargas_modal" data-backdrop="static"></div>
+
+
+/* Bootstra 4 - Text alignment */
+<p class="text-left">Left aligned text on all viewport sizes.</p>
+<p class="text-center">Center aligned text on all viewport sizes.</p>
+<p class="text-right">Right aligned text on all viewport sizes.</p>
